feat(docker): added support for multi replicas, introduced health check for all containers
