# services/currency/openapi_server/controllers/currency_controller.py
@@ -1,4 +1,7 @@
 import connexion
+import uuid
+import bcrypt
+
 from typing import Dict
 from typing import Tuple
 from typing import Union
@@ -6,6 +9,11 @@ from typing import Union
 from openapi_server.models.bundle import Bundle  # noqa: E501
 from openapi_server import util
 
+from flask import current_app, jsonify, request, make_response, session
+from flaskext.mysql import MySQL
+
+def health_check():  # noqa: E501
+    return jsonify({"message": "Service operational."}), 200
 
 def buy_currency(bundle_id, session=None):  # noqa: E501
     """Buy in-game credits
