# services/feedback/openapi_server/controllers/feedback_controller.py
@@ -1,10 +1,18 @@
 import connexion
+import uuid
+import bcrypt
+
 from typing import Dict
 from typing import Tuple
 from typing import Union
 
 from openapi_server import util
 
+from flask import current_app, jsonify, request, make_response, session
+from flaskext.mysql import MySQL
+
+def health_check():  # noqa: E501
+    return jsonify({"message": "Service operational."}), 200
 
 def post_feedback(string, session=None):  # noqa: E501
     """Sends a feedback.
