# services/pvp/openapi_server/controllers/pvp_controller.py
@@ -1,4 +1,7 @@
 import connexion
+import uuid
+import bcrypt
+
 from typing import Dict
 from typing import Tuple
 from typing import Union
@@ -8,6 +11,11 @@ from openapi_server.models.pv_p_request import PvPRequest  # noqa: E501
 from openapi_server.models.team import Team  # noqa: E501
 from openapi_server import util
 
+from flask import current_app, jsonify, request, make_response, session
+from flaskext.mysql import MySQL
+
+def health_check():  # noqa: E501
+    return jsonify({"message": "Service operational."}), 200
 
 def accept_pvp_request(pvp_match_uuid, team, session=None):  # noqa: E501
     """Accept a pending PvP request.
